FIXED: Tabs don't properly support two-part language codes.
       (resolves issue 63)


v0.3.2
======
Date: 2011-06-16
Packaged from revision 122.

FIXED: Static files not included during installation.
       (resolves issue 61)


v0.3.1
======
Date: 2011-06-07
Packaged from revision 121.

CHANGED: Renamed media folder to static.


v0.3
====
Date: 2011-06-03
Packaged from revision 113.

  ADDED: Support for multi-table inheritance.
         (thanks to Sébastien Fievet, resolves issues 50 and 51)
  ADDED: Jquery-ui based admin support for tabbed translation fields.
         (thanks to jaap and adamsc, resolves issue 39)
  ADDED: CSS class to identify a translation field and the default translation
         field in admin.
         (thanks to jaap)
  ADDED: Configurable default value per field instance.
         (thanks to bmihelac, resolves issue 28)
  ADDED: Setting to override the default language.
         (thanks to jaap, resolves issue 2)

CHANGED: Improved performance of update_translation_fields command.
         (thanks to adamsc, resolves issue 43)
CHANGED: Factored out settings into a separate settings.py and consistently
         used an app specific settings prefix.
CHANGED: Refactored creation of translation fields and added handling of
         supported fields.
         (resolves issue 37)

  FIXED: Clearing the default translation field in admin does not clear the
         original field.
         (resolves issue 47)
  FIXED: In some setups appears "This field is required" error for the
         original field.
         (resolves issue 5)
  FIXED: Translations are not saved for tinymce HTMLField when using jquery
         tabs.
         (thanks to kottenator, resolves issue 41)
  FIXED: Fieldname isn't ensured to be string.
         (resolves issue 41)
  FIXED: Kept backwards compatibility with Django-1.0.
         (thanks to jaap, resolves issue 34)
  FIXED: Regression in south_field_triple caused by r55.